WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113551
We leak NetworkConnectionToWebProcess objects
https://bugs.webkit.org/show_bug.cgi?id=113551
Summary
We leak NetworkConnectionToWebProcess objects
Brady Eidson
Reported
2013-03-28 18:09:51 PDT
We leak NetworkConnectionToWebProcess objects They don't remove themselves from the global set once their connection closes, keeping them alive. In radar as <
rdar://problem/13393118
>
Attachments
Patch v1
(1.54 KB, patch)
2013-03-28 18:11 PDT
,
Brady Eidson
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2013-03-28 18:11:36 PDT
Created
attachment 195686
[details]
Patch v1
Brady Eidson
Comment 2
2013-03-28 18:15:23 PDT
http://trac.webkit.org/changeset/147191
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug