We leak NetworkConnectionToWebProcess objects. <rdar://problem/13393118> and https://bugs.webkit.org/show_bug.cgi?id=113551

Reviewed by Anders Carlsson.

* NetworkProcess/NetworkConnectionToWebProcess.cpp:
(WebKit::NetworkConnectionToWebProcess::didClose): Remove this from the global set
  of NetworkConnectionToWebProcess objects.

Canonical link: https://commits.webkit.org/131906@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147191 268f45cc-cd09-0410-ab3c-d52691b4dbfc